[project]
name = "lipvisemes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.32",
    "opencv-python>=4.13.0.92",
    "openai>=1.0.0",
    "groq>=0.4.0",
    "supermemory>=3.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.4.2",
    "modal>=1.3.4",
    "fastapi[standard]>=0.134.0",
]
